--- a/Frontend/perfil-empresa.html
+++ b/Frontend/perfil-empresa.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil de Empresa - BetaTech Solutions</title>
-    <link rel="stylesheet" href="./perfil-empresa.css">
+    <link rel="stylesheet" href="css/perfil-empresa.css">
+    <link rel="stylesheet" href="css/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-</head>
+    
+    
 <body>
     <div class="container">
         <!-- Sidebar Izquierdo -->
@@ -45,7 +46,7 @@
             <!-- Header con imagen de portada -->
             <header class="profile-header">
                 <div class="cover-image">
-                    <img src="img/empresa-banner.jpg" alt="Banner BetaTech">
+                    <img src="img/empresa.jpg" alt="Banner BetaTech">
                     <div class="cover-overlay">
                         <h2 class="cover-title">BetaTech Solutions</h2>
                         <button class="explore-btn">Conócenos</button>
