--- a/Frontend/perfil-usuario.html
+++ b/Frontend/perfil-usuario.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Perfil de Usuario - Jenna Smith</title>
-    <link rel="stylesheet" href="./perfil-usuario.css">
+    <link rel="stylesheet" href="css/perfil-usuario.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -231,11 +231,6 @@
                         <span class="activity-time">Hace 1 día</span>
                     </div>
                 </div>
-            </div>
-
-            <!-- Tiempo actual -->
-            <div class="time-widget">
-                <span class="current-time">04:20 PM</span>
             </div>
         </aside>
     </div>
