--- a/PRUEBA.HTML
+++ b/PRUEBA.HTML
@@ -1,4 +1,4 @@
-    <!-- FOOTER -->
+<!-- FOOTER -->
     <footer style="background-color: #d0f0fd; padding: 60px 30px; font-family: Arial, sans-serif; color: #1a1a1a;">
         <div style="max-width: 1200px; margin: auto; display: flex; flex-wrap: wrap; justify-content: space-between; gap: 40px;">
 
@@ -92,4 +92,13 @@
             © 2025 Touristmo. Todos los derechos reservados. 🇵🇦
         </div>
     </footer>
-    
+
+    <select name="Tipo" id="tipo" class="form-select" required>
+        <option value="">Selecciona el tipo</option>
+        <option value="Playa">Playa</option>
+        <option value="Montaña">Montaña</option>
+        <option value="Sitio histórico">Sitio histórico</option>
+        <option value="Parque Nacional">Parque Nacional</option>
+        <option value="Ciudad">Ciudad</option>
+        <option value="Otro">Otro</option>
+    </select>
