PERFIL CLIENTE READY

--- a/Frontend/pagina-principal.html
+++ b/Frontend/pagina-principal.html
@@ -43,7 +43,7 @@
         
         <!-- Redes Sociales -->
         <div class="social-container">
-            <a href="https://www.facebook.com" class="social-link" data-icon="facebook" aria-label="Facebook"></a>
+            <a href="" class="social-link" data-icon="facebook" aria-label="Facebook"></a>
             <a href="https://www.instagram.com" class="social-link" data-icon="instagram" aria-label="Instagram"></a>
         </div>
     </div>
@@ -61,7 +61,7 @@
   <div class="hero-content">
     <h1 class="hero-title">Explora las maravillas de Panamá</h1>
     <p class="hero-subtitle">Un lugar donde la naturaleza y la aventura se unen</p>
-    <a href="login.html" class="hero-cta">
+    <a href="#destinos" class="hero-cta">
       <span>Iniciar Sesión</span>
     </a>
   </div>
@@ -706,7 +706,7 @@ document.addEventListener('DOMContentLoaded', function () {
                         <span class="location-icon">${typeIcon}</span>
                         ${item.provincia}
                     </p>
-                    <p class="destination-date ${item.tipo.toLowerCase()}">${item.tipo}</p>
+                    <p class="destination-type ${item.tipo.toLowerCase()}">${item.tipo}</p>
                     <div class="destination-meta">
                         <span class="rating">
                             <span class="star-icon">${icons.star}</span>
