PERFIL USUARIO salsa

--- a/Frontend/pagina-principal.html
+++ b/Frontend/pagina-principal.html
@@ -45,6 +45,7 @@
         <div class="social-container">
             <a href="" class="social-link" data-icon="facebook" aria-label="Facebook"></a>
             <a href="https://www.instagram.com" class="social-link" data-icon="instagram" aria-label="Instagram"></a>
+            <button class="power-off" data-icon="circle-power" style="display: none;"></button>
         </div>
     </div>
 
@@ -439,6 +440,7 @@ document.addEventListener('DOMContentLoaded', function () {
         x: '<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>',
         facebook: '<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"/></svg>',
         instagram: '<svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"/><path d="m16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/></svg>',
+        CirclePower: '<svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 7v4"/><path d="M7.998 9.003a5 5 0 1 0 8-.005"/><circle cx="12" cy="12" r="10"/></svg>'
     };
 
 
