--- a/Frontend/perfil-usuario.html
+++ b/Frontend/perfil-usuario.html
@@ -52,6 +52,9 @@
                 <h1 class="user-name">Jenna Smith</h1>
                 <p class="user-username">@jennasmith</p>
             </div>
+             <div class="action-buttons">
+                    <a href="FormularioDestino.html" class="btn-primary">Registra un destino</a>
+            </div>
         </aside>
 
         <!-- Contenido Principal -->
